# Projet12

./: .gitignore  Dockerfile  diagram.md  docker-compose.yaml  init_airflow.sh  plan-monitoring.md  pyproject.toml  run-docker.sh
dags/: pipeline-checkit.py
dashboard/: app.py
data/processed/: articles_clean.json
data/raw/: articles_bruts.json
src/checkit/: extractor.py  loader.py  scraper.py  transformer.py
tests/: test_extractor.py  test_scraper.py  test_transformer.py
